[package]
name = "codex-infinity-tasks-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_infinity_tasks_client"
path = "src/lib.rs"

[lints]
workspace = true

[features]
default = ["online"]
online = ["dep:reqwest"]
mock = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, features = ["json"], optional = true }
