[build-system]
requires = ["uv_build>=0.11.19,<0.12"]
build-backend = "uv_build"

[project]
name = "openai-codex-app-server-sdk"
version = "0.116.0a1"
description = "Python SDK for Codex app-server v2"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "OpenClaw Assistant" }]
keywords = ["codex", "json-rpc", "sdk", "llm", "app-server"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["pydantic>=2.12"]

[project.urls]
Homepage = "https://github.com/openai/codex"
Repository = "https://github.com/openai/codex"
Issues = "https://github.com/openai/codex/issues"
Documentation = "https://github.com/openai/codex/tree/main/sdk/python/docs"

[project.optional-dependencies]
dev = ["pytest>=8.0", "datamodel-code-generator==0.31.2", "ruff>=0.11"]

[tool.hatch.build]
exclude = [
  ".venv/**",
  ".venv2/**",
  ".pytest_cache/**",
  "dist/**",
  "build/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codex_app_server"]
include = [
  "src/codex_app_server/py.typed",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/codex_app_server/**",
  "README.md",
  "CHANGELOG.md",
  "CONTRIBUTING.md",
  "RELEASE_CHECKLIST.md",
  "pyproject.toml",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.uv]
exclude-newer = "7 days"
index-strategy = "first-index"

[tool.uv.pip]
exclude-newer = "7 days"
index-strategy = "first-index"
